second commit done

--- a/index.html
+++ b/index.html
@@ -228,8 +228,34 @@
                 </div>
             </div>
         </section>
-
         
+        <section class="group">
+            <div class="group-container">
+                <div class="image-path"></div>
+                <div class="text-path">
+                    <h2>
+                        Preparing For Your Success,<br>
+                        We Provide Truly Prominent IT Solutions.
+                    </h2>
+                    <p>
+                        Podcasting operational change management inside of workflows to establish a framework. Taking seamless key <br>performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the <br> start-up mentality to derive convergence on cross-platform integration. Image from
+                    </p>
+                </div>
+                <div class="question">
+                    <h2>
+                        Do you need professionals for your next <br> construction project?
+                    </h2>
+                    <button>CONTACT US</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section class="blast">
+            <div class="last-container">
+                <div class="last-left"></div>
+                <div class="last-right"></div>
+            </div>
+        </section> -->
     </main>
 </body>
 </html>
